--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Das Empfängerkonto hat keinen öffentlichen Schlüssel.",
   "error_recipient_no_public_key_announcement": "Empfängerkonto hat keinen öffentlichen Schlüssel, muss eine Ankündigung des öffentlichen Schlüssels anhängen.",
   "error_refund_already_sent": "Rückerstattung bereits gesendet.",
-  "error_send_money": "Ein unbekannter Fehler ist aufgetreten! Signa kann gesendet werden oder nicht.",
+  "error_send_money": "Hmm ... die Übertragung ist aus unbekannten Gründen fehlgeschlagen. Sorry, für Unannehmlichkeiten 🤷",
   "error_server_connect": "Es konnte keine Verbindung zum Server hergestellt werden.",
   "error_set_reward_recipient": "Ein unbekannter Fehler ist aufgetreten! Du konntest dem Pool nicht beitreten.",
   "error_transaction_already_signed": "Transaktion bereits unterschrieben.",
@@ -522,7 +522,7 @@
   "account_offline": "Beobachten",
   "account_safe": "Sicher",
   "account_unsafe": "Unsicher!",
-  "error_connection_fail": "Es konnte keine Verbindung zu einem Knoten/Peer hergestellt werden. Bitte wähle einen anderen aus",
+  "error_connection_fail": "Es konnte keine Verbindung zu einem Knoten/Peer hergestellt werden. Bitte wähle einen anderen aus.",
   "delete_selected": "Ausgewählte entfernen",
   "confirm_delete_accounts": "Entfernen bestätigen",
   "confirm_delete_accounts_hint": "Die Konten werden nur aus dieser Anwendung entfernt. Alle deine Werte werden sicher in der Blockchain gespeichert und du kannst entfernte Konten jederzeit mit deiner Recovery-Phrase erneut importieren.",
@@ -569,5 +569,15 @@
   "message_is_binary": "Datennachricht",
   "add_account_or_contact": "Konto oder Kontakt hinzufügen",
   "hint_new_account": "Dies ist ein neues Konto. Es ist noch nicht in der Blockchain registriert, hat also keine Transaktionen.",
-  "account_new": "Neu"
+  "account_new": "Neu",
+  "page_not_found_title": "Ressource nicht gefunden",
+  "page_not_found_hint": "Auch bei der Blockchain sind noch einige Lücken offen. So wie diese hier!",
+  "danger_zone": "Gefahrenzone",
+  "reset_wallet": "Wallet zurücksetzen",
+  "reset_wallet_hint": "Mit dem Zurücksetzen der Wallet entfernst du alle lokal gespeicherten Daten, Konten und Einstellungen der Wallet. Du kannst alle Deine Konten mittels der jeweilgen Recovery Phrase erneut importieren. Deine Signa und Tokens sind sicher auf der Blockchain gespeichert und somit nicht verloren, solange Du im Besitz der Recovery Phrasen bist.",
+  "welcome_to_wallet": "Willkommen bei der Signum Phoenix Wallet",
+  "refresh_transactions_hint": "Letzte Transaktionen neu laden/aktualisieren",
+  "desktop": "Desktop",
+  "success_send_message": "Nachricht erfolgreich gesendet",
+  "error_send_message": "Hmm ... das Senden der Nachricht ist aus unbekannten Gründen fehlgeschlagen."
 }
