--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Обліковий запис одержувача не має відкритого ключа.",
   "error_recipient_no_public_key_announcement": "Обліковий запис одержувача не має відкритого ключа, він повинен додати оголошення про відкритий ключ.",
   "error_refund_already_sent": "Повернення вже надіслано.",
-  "error_send_money": "Сталася невідома помилка! Signa може бути надіслана або не надіслана.",
+  "error_send_money": "Хм... перенесення не вдалося з невідомих причин. Вибачте за незручності 🤷",
   "error_server_connect": "Неможливо під'єднатися до сервера.",
   "error_set_reward_recipient": "Сталася невідома помилка! Ви не можете приєднатися до басейну.",
   "error_transaction_already_signed": "Угода вже підписана.",
@@ -569,5 +569,15 @@
   "message_is_binary": "Повідомлення даних",
   "add_account_or_contact": "Додайте обліковий запис або контакт",
   "hint_new_account": "Це новий обліковий запис. Він ще не зареєстрований у мережі, тобто не має транзакцій.",
-  "account_new": "новий"
+  "account_new": "новий",
+  "page_not_found_title": "Ресурс не знайдено",
+  "page_not_found_hint": "Навіть з блокчейном деякі простори все ще не охоплені. Як цей тут!",
+  "danger_zone": "НЕБЕЗПЕЧНА ЗОНА",
+  "reset_wallet": "Скинути гаманець",
+  "reset_wallet_hint": "Скидання гаманця видаляє всі локально збережені дані, облікові записи та налаштування з гаманця. Ви можете повторно імпортувати всі свої облікові записи за допомогою відповідної фрази відновлення. Ваш Signa та токени надійно зберігаються в блокчейні, тому не втрачаються, доки у вас є фрази відновлення.",
+  "welcome_to_wallet": "Ласкаво просимо до гаманця Signum Phoenix",
+  "refresh_transactions_hint": "Перезавантажити/оновити останні транзакції",
+  "desktop": "Робочий стіл",
+  "success_send_message": "Повідомлення успішно надіслано",
+  "error_send_message": "Хм... не вдалося надіслати повідомлення з невідомих причин."
 }
