--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "收件人帐户没有公钥。",
   "error_recipient_no_public_key_announcement": "收款账号没有公钥，必须附上公钥公告。",
   "error_refund_already_sent": "退款已经寄出。",
-  "error_send_money": "发生未知错误！ Signa 可能会也可能不会被发送。",
+  "error_send_money": "嗯...由于某些未知原因，传输失败了。抱歉，给您带来不便🤷",
   "error_server_connect": "无法连接到服务器。",
   "error_set_reward_recipient": "发生未知错误！您无法加入池。",
   "error_transaction_already_signed": "交易已经签署。",
@@ -569,5 +569,15 @@
   "message_is_binary": "数据信息",
   "add_account_or_contact": "添加帐户或联系人",
   "hint_new_account": "这是一个新帐户。它还没有在链上注册，即没有交易。",
-  "account_new": "新的"
+  "account_new": "新的",
+  "page_not_found_title": "找不到资源",
+  "page_not_found_hint": "即使使用区块链，一些空间仍未被发现。就像这里的这个！",
+  "danger_zone": "危险区",
+  "reset_wallet": "重置钱包",
+  "reset_wallet_hint": "重置钱包会从钱包中删除所有本地存储的数据、帐户和设置。您可以使用相应的恢复短语重新导入所有帐户。您的 Signa 和代币安全地存储在区块链上，因此只要您拥有助记词就不会丢失。",
+  "welcome_to_wallet": "欢迎使用 Signum Phoenix 钱包",
+  "refresh_transactions_hint": "重新加载/刷新最新交易",
+  "desktop": "桌面",
+  "success_send_message": "消息已成功发送",
+  "error_send_message": "嗯...发送消息失败，原因不明。"
 }
