--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "受信者アカウントに公開鍵がありません。",
   "error_recipient_no_public_key_announcement": "受信者のアカウントには公開鍵がありません。公開鍵の通知を添付する必要があります。",
   "error_refund_already_sent": "払い戻しはすでに送信されています。",
-  "error_send_money": "不明なエラーが発生しました!シグナは送信される場合と送信されない場合があります。",
+  "error_send_money": "うーん...不明な理由で転送に失敗しました。ご不便をおかけして申し訳ありません🤷",
   "error_server_connect": "サーバーに接続できませんでした。",
   "error_set_reward_recipient": "不明なエラーが発生しました!プールに参加できませんでした。",
   "error_transaction_already_signed": "トランザクションはすでに署名されています。",
@@ -569,5 +569,15 @@
   "message_is_binary": "データメッセージ",
   "add_account_or_contact": "アカウントまたは連絡先を追加",
   "hint_new_account": "これは新しいアカウントです。まだチェーンに登録されていません。つまり、トランザクションはありません。",
-  "account_new": "新しい"
+  "account_new": "新しい",
+  "page_not_found_title": "リソースが見つかりません",
+  "page_not_found_hint": "ブロックチェーンを使用しても、いくつかのスペースがまだ明らかにされています。ここのように！",
+  "danger_zone": "危険区域",
+  "reset_wallet": "ウォレットのリセット",
+  "reset_wallet_hint": "ウォレットをリセットすると、ローカルに保存されたすべてのデータ、アカウント、および設定がウォレットから削除されます。それぞれの復元フレーズを使用して、すべてのアカウントを再インポートできます。あなたのシグナとトークンはブロックチェーンに安全に保管されているため、復元フレーズを所有している限り失われることはありません。",
+  "welcome_to_wallet": "Signum Phoenix ウォレットへようこそ",
+  "refresh_transactions_hint": "最新のトランザクションをリロード/リフレッシュ",
+  "desktop": "デスクトップ",
+  "success_send_message": "送信に成功しました",
+  "error_send_message": "うーん...不明な理由でメッセージの送信に失敗しました。"
 }
