--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Gavėjo paskyra neturi viešojo rakto.",
   "error_recipient_no_public_key_announcement": "Gavėjo paskyra neturi viešojo rakto, turi pridėti viešojo rakto skelbimą.",
   "error_refund_already_sent": "Grąžinimas jau išsiųstas.",
-  "error_send_money": "Įvyko nežinoma klaida! Signa gali būti ir nesiųsta.",
+  "error_send_money": "Hmm... perkėlimas nepavyko dėl nežinomų priežasčių. Atsiprašome už nepatogumus 🤷",
   "error_server_connect": "Neįmanoma prisijungti prie serverio.",
   "error_set_reward_recipient": "Įvyko nežinoma klaida! Jūs negalėjote prisijungti prie baseino.",
   "error_transaction_already_signed": "Sandoris jau pasirašytas.",
@@ -569,5 +569,15 @@
   "message_is_binary": "Duomenų pranešimas",
   "add_account_or_contact": "Pridėti paskyrą arba kontaktą",
   "hint_new_account": "Tai nauja paskyra. Jis dar neužregistruotas tinkle, t. y. neturi sandorių.",
-  "account_new": "Nauja"
+  "account_new": "Nauja",
+  "page_not_found_title": "Išteklius nerastas",
+  "page_not_found_hint": "Net naudojant „blockchain“, kai kurios erdvės vis dar neuždengtos. Kaip šis čia!",
+  "danger_zone": "Pavojaus zona",
+  "reset_wallet": "Iš naujo nustatyti Piniginę",
+  "reset_wallet_hint": "Iš naujo nustatant piniginę iš piniginės pašalinami visi vietoje saugomi duomenys, paskyros ir nustatymai. Galite iš naujo importuoti visas savo paskyras naudodami atitinkamą atkūrimo frazę. Jūsų „Signa“ ir žetonai yra saugiai saugomi „blockchain“, todėl neprarandami tol, kol turite atkūrimo frazes.",
+  "welcome_to_wallet": "Sveiki atvykę į „Signum Phoenix“ piniginę",
+  "refresh_transactions_hint": "Iš naujo įkelti / atnaujinti naujausias operacijas",
+  "desktop": "Darbalaukis",
+  "success_send_message": "Pranešimas sėkmingai išsiųstas",
+  "error_send_message": "Hmm... dėl nežinomų priežasčių nepavyko išsiųsti pranešimo."
 }
