--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Contul destinatarului nu are cheie publică.",
   "error_recipient_no_public_key_announcement": "Contul destinatarului nu are o cheie publică, trebuie să atașeze un anunț de cheie publică.",
   "error_refund_already_sent": "Rambursarea a fost deja trimisă.",
-  "error_send_money": "A apărut o eroare necunoscută! Signa poate fi sau nu trimisă.",
+  "error_send_money": "Hmm... transferul a eșuat din motive necunoscute. Scuze, pentru neplăceri 🤷",
   "error_server_connect": "Nu se poate conecta la server.",
   "error_set_reward_recipient": "A apărut o eroare necunoscută! Nu ai putut să te alături piscinei.",
   "error_transaction_already_signed": "Tranzacția este deja semnată.",
@@ -569,5 +569,15 @@
   "message_is_binary": "Mesaj de date",
   "add_account_or_contact": "Adăugați cont sau contact",
   "hint_new_account": "Acesta este un cont nou. Nu este încă înregistrată în lanț, adică nu are tranzacții.",
-  "account_new": "Nou"
+  "account_new": "Nou",
+  "page_not_found_title": "Resursa nu a fost găsită",
+  "page_not_found_hint": "Chiar și cu blockchain, unele spații sunt încă descoperite. Ca acesta aici!",
+  "danger_zone": "Zona periculoasă",
+  "reset_wallet": "Resetați portofelul",
+  "reset_wallet_hint": "Resetarea portofelului elimină toate datele, conturile și setările stocate local din portofel. Puteți reimporta toate conturile folosind expresia de recuperare respectivă. Semnele și jetoanele dvs. sunt stocate în siguranță pe blockchain și, prin urmare, nu sunt pierdute atâta timp cât sunteți în posesia frazelor de recuperare.",
+  "welcome_to_wallet": "Bine ați venit la Signum Phoenix Wallet",
+  "refresh_transactions_hint": "Reîncărcați/Actualizați cele mai recente tranzacții",
+  "desktop": "Desktop",
+  "success_send_message": "mesaj trimis cu succes",
+  "error_send_message": "Hmm... trimiterea mesajului a eșuat din motive necunoscute."
 }
